--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,7 @@ jobs:
         id: meta
         uses: crazy-max/ghaction-docker-meta@v2
         with:
-          images: cupcakearmy/radicale
+          images: mq89/radicale
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
